--- a/android/YogSMS/YogSMS/res/layout/main.xml
+++ b/android/YogSMS/YogSMS/res/layout/main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
 <LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
 				android:layout_width="fill_parent" 
 				android:layout_height="fill_parent" 
@@ -9,12 +10,49 @@
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content" 
 				android:text="@string/sms_title"/>					
-	<ListView android:id="@android:id/list" 
+	 <ListView android:id="@+id/list"
 		android:layout_width="fill_parent" 
 		android:layout_height="wrap_content" 
 		xmlns:android="http://schemas.android.com/apk/res/android" />
 	<TextView   android:id="@+id/who"
 				android:textSize="16sp"
 				android:layout_width="fill_parent" 
-				android:layout_height="wrap_content" />			
+				android:layout_height="wrap_content" 
+				android:text="@string/sms_footer"/>			
 </LinearLayout>
+-->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+				android:layout_width="wrap_content" android:layout_height="wrap_content"
+				android:orientation="vertical">
+				<RelativeLayout android:id="@+id/top_control_bar"
+								android:layout_width="fill_parent"
+								android:layout_height="wrap_content">
+								<TextView android:id="@+id/title" 
+										android:layout_width="fill_parent"
+										android:layout_height="wrap_content" 
+										android:text="@string/sms_title" />
+				</RelativeLayout>
+				<LinearLayout android:id="@+id/bottom_control_bar"
+							android:layout_width="fill_parent" 
+							android:layout_height="wrap_content"
+							android:layout_alignParentBottom="true">
+							<TextView android:id="@+id/who"
+									android:layout_width="fill_parent"
+									android:layout_height="wrap_content" 
+									android:text="@string/empty" />
+				</LinearLayout>
+				<ListView android:id="@+id/list" 
+						android:layout_width="fill_parent"
+						android:layout_height="0dip" 
+						android:choiceMode="multipleChoice"
+						android:layout_below="@id/top_control_bar" 
+						android:layout_above="@id/bottom_control_bar">
+				</ListView>
+				<TextView android:id="@android:id/empty" 
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content" 
+						android:text="@string/empty"
+						android:layout_below="@id/top_control_bar" 
+						android:layout_above="@id/bottom_control_bar" />
+</RelativeLayout>
