--- a/android/YogSMS/YogSMS/res/layout/contact_entry.xml
+++ b/android/YogSMS/YogSMS/res/layout/contact_entry.xml
@@ -2,10 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content">
-    <ImageView android:id="@+id/contact_photo" 
-    		   android:layout_width="fill_parent"
+	<ImageView android:id="@+id/contact_photo" 
+    		   android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
     <TextView android:id="@+id/contact_displayname"
-              android:layout_width="fill_parent"
+              android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
+    <TextView android:id="@+id/contact_nbunreadSMS"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"/>              
 </LinearLayout>
