--- a/android/YogSMS/YogSMS/res/layout/sms_entry.xml
+++ b/android/YogSMS/YogSMS/res/layout/sms_entry.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
- 
-<LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
-				android:layout_width="fill_parent" 
-				android:layout_height="fill_parent" 
-				android:orientation="vertical">
-	<TextView   android:id="@+id/person"
-				android:textSize="16sp"
-				android:textStyle="bold"
-				android:layout_width="fill_parent" 
-				android:layout_height="wrap_content" />
-	<TextView   android:id="@+id/address"
-				android:textSize="16sp"
-				android:layout_width="fill_parent" 
-				android:layout_height="wrap_content" />     
-	<TextView   android:id="@+id/body"
-				android:textSize="16sp"
-				android:layout_width="fill_parent" 
-				android:layout_height="wrap_content" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:orientation="horizontal">              
+	<ImageView android:id="@+id/smsphoto" 
+    		   android:layout_width="54px"
+               android:layout_height="54px"/>
+	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	              android:layout_width="fill_parent"
+	              android:layout_height="wrap_content"
+	              android:orientation="vertical">
+	    <TextView android:id="@+id/smsdisplayname"
+	              android:layout_width="wrap_content"
+	              android:layout_height="wrap_content"/>
+	    <TextView android:id="@+id/smsmessage"
+	    		  android:textColor="#4A4A4A"
+	              android:layout_width="fill_parent"
+			      android:layout_height="wrap_content"/>
+	    <TextView android:id="@+id/smsdate"
+	              android:layout_width="wrap_content"
+	              android:layout_height="wrap_content"/>		              
+	</LinearLayout>		      
 </LinearLayout>
 
