--- a/android/YogSMS/YogSMS/res/layout/sms_entry_me.xml
+++ b/android/YogSMS/YogSMS/res/layout/sms_entry_me.xml
@@ -2,23 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
-              android:orientation="horizontal">              
-	<ImageView android:id="@+id/smsphoto" 
-    		   android:layout_width="54px"
-               android:layout_height="54px"/>
+              android:orientation="horizontal">       
+	<ImageView android:id="@+id/sms_me_photo" 
+				android:layout_width="54px"
+	  			android:layout_height="54px"/>	              
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	              android:layout_width="fill_parent"
 	              android:layout_height="wrap_content"
 	              android:orientation="vertical">
-	    <TextView android:id="@+id/smsdisplayname"
+	    <TextView android:id="@+id/sms_me_displayname"
+	    			android:layout_gravity="center_vertical|right"
 	              android:layout_width="wrap_content"
 	              android:layout_height="wrap_content"/>
-	    <TextView android:id="@+id/smsmessage"
+	    <TextView android:id="@+id/sms_me_message"
 	              android:layout_width="fill_parent"
 			      android:layout_height="wrap_content"/>
-	    <TextView android:id="@+id/smsdate"
+	    <TextView android:id="@+id/sms_me_date"
 	              android:layout_width="wrap_content"
 	              android:layout_height="wrap_content"/>		              
-	</LinearLayout>		      
+	</LinearLayout>
+
 </LinearLayout>
 
